DEV-02 Arrumei o bug do link home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header class="cabecalho">
   <nav class="cabecalho__menu">
-      <a class="cabecalho__menu__link" [routerLink]="">Home</a>
+      <a class="cabecalho__menu__link" [routerLink]="''">Home</a>
       <a class="cabecalho__menu__link" [routerLink]="'hero'">O Heroi</a>
       <a class="cabecalho__menu__link" [routerLink]="'about'">Sobre mim</a>
   </nav>
